<resources>
    <string name="app_name">Voyage</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_continue">login to continue</string>
    <string name="password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="select_user">select user</string>
    <string name="type_a_message">type a message</string>
    <string name="online">Online</string>
    <string name="WELCOMEE">WELCOME</string>
</resources>